--- a/src/unsw/dungeon/BUILD
+++ b/src/unsw/dungeon/BUILD
@@ -1,3 +1,12 @@
+java_library(
+    name = "dungeon",
+    srcs = glob(["**/*.java"]),
+    deps = [
+        "//lib:json.jar",
+    ],
+    visibility = ["//src:__subpackages__"],
+)
+
 java_binary(
     name = "DungeonApplication",
     srcs = glob(["**/*.java"]),
