--- a/src/test/unsw/dungeon/BUILD
+++ b/src/test/unsw/dungeon/BUILD
@@ -1,11 +1,10 @@
 load("@rules_java//java:defs.bzl", "java_test")
 
 java_test(
-    name = "basic",
+    name = "BasicTest",
     srcs = ["BasicTest.java"],
     test_class = "unsw.dungeon.BasicTest",
     deps = [
         "//lib:junit.jar",
     ],
 )
-
