--- a/src/test/unsw/dungeon/gameengine/gameplay/BUILD
+++ b/src/test/unsw/dungeon/gameengine/gameplay/BUILD
@@ -3,7 +3,7 @@ load("@rules_java//java:defs.bzl", "java_test")
 java_test(
     name = "CellTest",
     srcs = ["CellTest.java"],
-    test_class = "unsw.dungeon.gameplay.CellTest",
+    test_class = "unsw.dungeon.gameengine.gameplay.CellTest",
     deps = [
         "//src/unsw/dungeon",
         "//lib:junit.jar",
@@ -13,7 +13,7 @@ java_test(
 java_test(
     name = "MapObjectStateTest",
     srcs = ["MapObjectStateTest.java"],
-    test_class = "unsw.dungeon.gameplay.MapObjectStateTest",
+    test_class = "unsw.dungeon.gameengine.gameplay.MapObjectStateTest",
     deps = [
         "//src/unsw/dungeon",
         "//lib:junit.jar",
@@ -23,7 +23,7 @@ java_test(
 java_test(
     name = "PlayerEnemyCollisionTest",
     srcs = ["PlayerEnemyCollisionTest.java"],
-    test_class = "unsw.dungeon.gameplay.PlayerEnemyCollisionTest",
+    test_class = "unsw.dungeon.gameengine.gameplay.PlayerEnemyCollisionTest",
     deps = [
         "//src/unsw/dungeon",
         "//lib:junit.jar",
@@ -33,7 +33,7 @@ java_test(
 java_test(
     name = "DoorTest",
     srcs = ["DoorTest.java"],
-    test_class = "unsw.dungeon.gameplay.DoorTest",
+    test_class = "unsw.dungeon.gameengine.gameplay.DoorTest",
     deps = [
         "//src/unsw/dungeon",
         "//lib:junit.jar",
@@ -43,7 +43,7 @@ java_test(
 java_test(
     name = "BoulderMoveTest",
     srcs = ["BoulderMoveTest.java"],
-    test_class = "unsw.dungeon.gameplay.BoulderMoveTest",
+    test_class = "unsw.dungeon.gameengine.gameplay.BoulderMoveTest",
     deps = [
         "//src/unsw/dungeon",
         "//lib:junit.jar",
@@ -53,7 +53,7 @@ java_test(
 java_test(
     name = "FloorSwitchTest",
     srcs = ["FloorSwitchTest.java"],
-    test_class = "unsw.dungeon.gameplay.FloorSwitchTest",
+    test_class = "unsw.dungeon.gameengine.gameplay.FloorSwitchTest",
     deps = [
         "//src/unsw/dungeon",
         "//lib:junit.jar",
@@ -63,7 +63,7 @@ java_test(
 java_test(
     name = "PortalTest",
     srcs = ["PortalTest.java"],
-    test_class = "unsw.dungeon.gameplay.PortalTest",
+    test_class = "unsw.dungeon.gameengine.gameplay.PortalTest",
     deps = [
         "//src/unsw/dungeon",
         "//lib:junit.jar",
@@ -73,7 +73,7 @@ java_test(
 java_test(
     name = "CollectiblesAddedToInventoryTest",
     srcs = ["CollectiblesAddedToInventoryTest.java"],
-    test_class = "unsw.dungeon.gameplay.CollectiblesAddedToInventoryTest",
+    test_class = "unsw.dungeon.gameengine.gameplay.CollectiblesAddedToInventoryTest",
     deps = [
         "//src/unsw/dungeon",
         "//lib:junit.jar",
@@ -83,7 +83,7 @@ java_test(
 java_test(
     name = "PotionTimerTest",
     srcs = ["PotionTimerTest.java"],
-    test_class = "unsw.dungeon.gameplay.PotionTimerTest",
+    test_class = "unsw.dungeon.gameengine.gameplay.PotionTimerTest",
     deps = [
         "//src/unsw/dungeon",
         "//lib:junit.jar",
@@ -93,7 +93,7 @@ java_test(
 java_test(
     name = "WallTest",
     srcs = ["WallTest.java"],
-    test_class = "unsw.dungeon.gameplay.WallTest",
+    test_class = "unsw.dungeon.gameengine.gameplay.WallTest",
     deps = [
         "//src/unsw/dungeon",
         "//lib:junit.jar",
@@ -103,7 +103,7 @@ java_test(
 java_test(
     name = "WinningConditionTest",
     srcs = ["WinningConditionTest.java"],
-    test_class = "unsw.dungeon.gameplay.WinningConditionTest",
+    test_class = "unsw.dungeon.gameengine.gameplay.WinningConditionTest",
     deps = [
         "//src/unsw/dungeon",
         "//lib:junit.jar",
